# lexmind

./: Makefile  README.md  lexmind.db  pyproject.toml  test.sh
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py  services.py  utils.py
app/api/v1/: auth.py  users.py
app/core/: config.py  database.py  security.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  base.py  firm.py  user.py
app/repositories/: __init__.py  base.py  firm.py  user.py
app/routers/: auth.py
app/schemas/: __init__.py  auth.py  firm.py  user.py
app/services/: __init__.py  auth.py  user.py
tests/: conftest.py  test_auth.py  test_rbac.py  test_tenant_isolation.py
tests/sh/: test_task02.sh  test_task03.sh  test_task04.sh
