[project]
name = "lexmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

